--- a/configlib/Properties/launchSettings.json
+++ b/configlib/Properties/launchSettings.json
@@ -3,13 +3,13 @@
     "Client": {
       "commandName": "Executable",
       "executablePath": "dotnet",
-      "commandLineArgs": "\"$(VINTAGE_STORY)/Vintagestory.dll\" --tracelog --addModPath \"$(ProjectDir)/bin/$(Configuration)/Mods\"",
+      "commandLineArgs": "\"$(VINTAGE_STORY)/Vintagestory.dll\" --tracelog --dataPath \"C:/Users/user/AppData/Roaming/VintagestoryDataDev\" --addModPath \"C:/Users/user/AppData/Roaming/VintagestoryDataDev/Mods\" \"$(ProjectDir)/bin/$(Configuration)/Mods\" \"-o\" \"test_fsm_2\"",
       "workingDirectory": "$(VINTAGE_STORY)"
     },
     "Server": {
       "commandName": "Executable",
       "executablePath": "dotnet",
-      "commandLineArgs": "\"$(VINTAGE_STORY)/VintagestoryServer.dll\" --tracelog --addModPath \"$(ProjectDir)/bin/$(Configuration)/Mods\"",
+      "commandLineArgs": "\"$(VINTAGE_STORY)/VintagestoryServer.dll\" --tracelog --dataPath \"C:/Users/user/AppData/Roaming/VintagestoryDataDev\" --addModPath \"C:/Users/user/AppData/Roaming/VintagestoryDataDev/Mods\" \"$(ProjectDir)/bin/$(Configuration)/Mods\" \"-o\" \"test_fsm_2\"",
       "workingDirectory": "$(VINTAGE_STORY)"
     }
   }
