--- a/configlib/configlib.csproj
+++ b/configlib/configlib.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <ModName>Config lib</ModName>
     <GameVersion>1.19.4</GameVersion>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <ModId>configlib</ModId>
     <Description>Configs library with YAML config format and in-game GUI</Description>
     <Side>Universal</Side>
@@ -31,6 +31,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <!-- Paths -->
