--- a/configlib/configlib.csproj
+++ b/configlib/configlib.csproj
@@ -2,8 +2,9 @@
   <!-- Mod info -->
   <PropertyGroup>
     <ModName>Config lib</ModName>
-    <GameVersion>1.19.4</GameVersion>
-    <Version>1.3.13</Version>
+    <GameVersion>1.20.0-pre.5</GameVersion>
+    <ModVersion>1.3.17</ModVersion>
+    <Version>1.3.13</Version> <!-- Do not advance-->
     <ModId>configlib</ModId>
     <Description>Configs library with YAML config format and in-game GUI</Description>
     <Side>Universal</Side>
@@ -47,7 +48,7 @@
     <GameDirectory>$(VINTAGE_STORY)</GameDirectory>
     <ModIconFile>$(ProjectDir)\resources\modicon.png</ModIconFile>
     <ReleasesDir>$(ProjectDir)\Releases</ReleasesDir>
-    <ReleaseFile>$(ModId)_$(Version).zip</ReleaseFile>
+    <ReleaseFile>$(ModId)_$(ModVersion).zip</ReleaseFile>
     <ReleasePath>$(ReleasesDir)\$(ReleaseFile)</ReleasePath>
   </PropertyGroup>
 
@@ -145,7 +146,7 @@
     "type": "code",
     "name": "$(ModName)",
     "modid": "$(ModId)",
-    "version": "$(Version)",
+    "version": "$(ModVersion)",
 
     "description": "$(Description)",
     "authors": [ @(ModInfoAuthors->'"%(Identity)"', ', ') ],
