--- a/configlib/configlib.csproj
+++ b/configlib/configlib.csproj
@@ -2,8 +2,8 @@
   <!-- Mod info -->
   <PropertyGroup>
     <ModName>Config lib</ModName>
-    <GameVersion>1.20.0-pre.5</GameVersion>
-    <ModVersion>1.3.17</ModVersion>
+    <GameVersion>*</GameVersion>
+    <ModVersion>1.4.1</ModVersion>
     <Version>1.3.13</Version> <!-- Do not advance-->
     <ModId>configlib</ModId>
     <Description>Configs library with YAML config format and in-game GUI</Description>
@@ -24,7 +24,7 @@
       <Version>$(GameVersion)</Version>
     </Dependencies>
     <Dependencies Include="vsimgui">
-      <Version>1.1.0</Version>
+      <Version>*</Version>
     </Dependencies>
   </ItemGroup>
 
