--- a/configlib/configlib.csproj
+++ b/configlib/configlib.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <ModName>Config lib</ModName>
     <GameVersion>*</GameVersion>
-    <ModVersion>1.5.3</ModVersion>
+    <ModVersion>1.6.4</ModVersion>
     <Version>1.3.13</Version> <!-- Do not advance-->
     <ModId>configlib</ModId>
     <Description>Configs library with YAML config format and in-game GUI</Description>
-    <Side>Universal</Side>
+    <Side>universal</Side>
     <RequiredOnClient>true</RequiredOnClient>
     <RequiredOnServer>false</RequiredOnServer>
   </PropertyGroup>
@@ -30,7 +30,7 @@
 
   <!-- Project settings -->
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -69,59 +69,7 @@
       <HintPath>..\lib\YamlDotNet.dll</HintPath>
     </Reference>
     <!-- Vintage Story dependencies: wont be copied into output directory -->
-    <Reference Include="OpenTK.Compute">
-      <HintPath>$(GameDirectory)\Lib\OpenTK.Compute.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="OpenTK.Core">
-      <HintPath>$(GameDirectory)\Lib\OpenTK.Core.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="OpenTK.Graphics">
-      <HintPath>$(GameDirectory)\Lib\OpenTK.Graphics.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="OpenTK.Input">
-      <HintPath>$(GameDirectory)\Lib\OpenTK.Input.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="OpenTK.Mathematics">
-      <HintPath>$(GameDirectory)\Lib\OpenTK.Mathematics.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="OpenTK.Windowing.Common">
-      <HintPath>$(GameDirectory)\Lib\OpenTK.Windowing.Common.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="OpenTK.Windowing.Desktop">
-      <HintPath>$(GameDirectory)\Lib\OpenTK.Windowing.Desktop.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="OpenTK.Windowing.GraphicsLibraryFramework">
-      <HintPath>$(GameDirectory)\Lib\OpenTK.Windowing.GraphicsLibraryFramework.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="protobuf-net">
-      <HintPath>$(GameDirectory)/Lib/protobuf-net.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="0Harmony">
-      <HintPath>$(GameDirectory)/Lib/0Harmony.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>$(GameDirectory)/Lib/Newtonsoft.Json.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <!-- Vintage Story own libraries: wont be copied into output directory -->
-    <Reference Include="VintagestoryAPI">
-      <HintPath>$(GameDirectory)/VintagestoryAPI.dll</HintPath>
-      <Private>false</Private>
-    </Reference>
-    <Reference Include="VintagestoryLib">
-      <HintPath>$(GameDirectory)/VintagestoryLib.dll</HintPath>
-      <Private>false</Private>
-    </Reference>
+    <Reference Include="$(GameDirectory)/**/*.dll" Private="false" />
   </ItemGroup>
 
   <!-- SimpleExpressionEngine project ref; Is used for patching values with expressions -->
