--- a/configlib/configlib.csproj
+++ b/configlib/configlib.csproj
@@ -4,9 +4,8 @@
     <ModName>Config lib</ModName>
     <GameVersion>*</GameVersion>
     <ModVersion>1.10.3</ModVersion>
-    <Version>1.3.13</Version> <!-- Do not advance-->
     <ModId>configlib</ModId>
-    <Description>Configs library with YAML config format and in-game GUI</Description>
+    <Description>A universal place to configure your mods. Makes it possible for content mods to have configs too.</Description>
     <Side>universal</Side>
     <RequiredOnClient>true</RequiredOnClient>
     <RequiredOnServer>false</RequiredOnServer>
@@ -15,17 +14,12 @@
   <!-- Authors -->
   <ItemGroup>
     <ModInfoAuthors Include="Maltiez" />
-    <ModInfoAuthors Include="Somnium" />
+    <ModInfoAuthors Include="The Insanity God" />
   </ItemGroup>
 
   <!-- Dependencies -->
   <ItemGroup>
-    <Dependencies Include="game">
-      <Version>$(GameVersion)</Version>
-    </Dependencies>
-    <Dependencies Include="vsimgui">
-      <Version>*</Version>
-    </Dependencies>
+    <Dependencies Include="vsimgui" Version="1.1.13" />
   </ItemGroup>
 
   <!-- Project settings -->
@@ -34,18 +28,18 @@
     <Nullable>enable</Nullable>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Version>1.3.13</Version><!-- Do not advance-->
   </PropertyGroup>
+
+  <!-- Loading local settings file -->
+  <Import Project="Properties\localSettings.props" Condition="Exists('Properties\localSettings.props')" />
 
   <!-- Paths -->
   <PropertyGroup>
     <ProjectDir>$(MSBuildProjectDirectory)</ProjectDir>
+    <SolutionDir>$(ProjectDir)\..</SolutionDir>
     <OutputDir>bin\$(Configuration)\Mods</OutputDir>
     <OutputPath>$(OutputDir)\$(ModId)</OutputPath>
-    <SubmodulesDir>$(ProjectDir)\..</SubmodulesDir>
-    <ImGuiSubmodule>$(SubmodulesDir)\VintageStory_ImGui\VSImGui</ImGuiSubmodule>
-    <ImGuiSubmoduleOutput>$(ImGuiSubmodule)\bin\$(Configuration)\Mods\vsimgui</ImGuiSubmoduleOutput>
-    <ImGuiReleasesFolder>$(ImGuiSubmodule)\Releases</ImGuiReleasesFolder>
-    <GameDirectory>$(VINTAGE_STORY)</GameDirectory>
     <ModIconFile>$(ProjectDir)\resources\modicon.png</ModIconFile>
     <ReleasesDir>$(ProjectDir)\Releases</ReleasesDir>
     <ReleaseFile>$(ModId)_$(ModVersion).zip</ReleaseFile>
@@ -54,27 +48,40 @@
 
   <!-- Startup settings -->
   <PropertyGroup>
-    <DataFolderName>VintagestoryDataDev</DataFolderName>
-    <AppDataDir>C:\Users\user\AppData\Roaming</AppDataDir>
-    <DataFolder>$(AppDataDir)\$(DataFolderName)</DataFolder>
-    <AditionalModsFolder>$(AppDataDir)\$(DataFolderName)\Mods</AditionalModsFolder>
+    <DataFolder>$(DataFolderDirectoy)\$(DataFolderName)</DataFolder>
+    <AditionalModsFolder>$(DataFolder)\Mods</AditionalModsFolder>
     <WorldName>test_$(ModId)</WorldName>
     <ModDir>$(ProjectDir)\$(OutputDir)</ModDir>
+    <EnterWorldCommand Condition="'$(EnterWorldOnStartup)' == 'true'">"-o" "$(WorldName)"</EnterWorldCommand>
   </PropertyGroup>
+
 
   <!-- References to libraries that are being used in project -->
   <ItemGroup>
     <!-- Additional dependencies: will be merged into main dll by ILRepack -->
-    <Reference Include="YamlDotNet">
-      <HintPath>..\lib\YamlDotNet.dll</HintPath>
-    </Reference>
-    <!-- Vintage Story dependencies: wont be copied into output directory -->
-    <Reference Include="$(GameDirectory)/**/*.dll" Private="false" />
+    <Reference Include="YamlDotNet" HintPath="$(SolutionDir)\lib\YamlDotNet.dll" />
+    <!-- Vintage Story libraries -->
+    <Reference Include="VintagestoryLib" HintPath="$(GameDirectory)/VintagestoryLib.dll" Private="false"/>
+    <Reference Include="VintagestoryAPI" HintPath="$(GameDirectory)/VintagestoryAPI.dll" Private="false"/>
+    <Reference Include="VSSurvivalMod" HintPath="$(GameDirectory)/Mods/VSSurvivalMod.dll" Private="false"/>
+    <Reference Include="VSEssentials" HintPath="$(GameDirectory)/Mods/VSEssentials.dll" Private="false"/>
+    <Reference Include="VSCreativeMod" HintPath="$(GameDirectory)/Mods/VSCreativeMod.dll" Private="false"/>
+    <Reference Include="Newtonsoft.Json" HintPath="$(GameDirectory)/Lib/Newtonsoft.Json.dll" Private="false"/>
+    <Reference Include="0Harmony" HintPath="$(GameDirectory)/Lib/0Harmony.dll" Private="false"/>
+    <Reference Include="protobuf-net" HintPath="$(GameDirectory)/Lib/protobuf-net.dll" Private="false"/>
+    <Reference Include="cairo-sharp" HintPath="$(GameDirectory)/Lib/cairo-sharp.dll" Private="false"/>
+    <Reference Include="JsonDiffPatch" HintPath="$(GameDirectory)/Lib/JsonDiffPatch.dll" Private="false"/>
+    <Reference Include="cairo-sharp" HintPath="$(GameDirectory)/Lib/cairo-sharp.dll" Private="false"/>
+    <Reference Include="Tavis.JsonPatch" HintPath="$(GameDirectory)/Lib/Tavis.JsonPatch.dll" Private="false"/>
+    <Reference Include="SkiaSharp" HintPath="$(GameDirectory)/Lib/SkiaSharp.dll" Private="false"/>
+    <Reference Include="$(GameDirectory)/Lib/OpenTK*.dll" Private="false"/>
+    <!-- ImGui -->
+    <PackageReference Include="VSImGui" Version="0.0.6" />
   </ItemGroup>
 
   <!-- SimpleExpressionEngine project ref; Is used for patching values with expressions -->
   <ItemGroup>
-    <ProjectReference Include="..\SimpleExpressionEngine\SimpleExpressionEngine\SimpleExpressionEngine.csproj" />
+    <ProjectReference Include="$(SolutionDir)\SimpleExpressionEngine\SimpleExpressionEngine\SimpleExpressionEngine.csproj" />
   </ItemGroup>
 
   <!-- ILRepack nugget package ref; Is used to merge multiple dlls into one to avoid conflicts -->
@@ -83,8 +90,26 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="VSImGui" Version="0.0.6" />
   </ItemGroup>
+
+  <!-- Creating local settings file -->
+  <PropertyGroup>
+    <DefaultLocalSettingsFile>
+&lt;Project&gt;
+  &lt;PropertyGroup&gt;
+      &lt;DataFolderName&gt;VintagestoryDataDev&lt;/DataFolderName&gt;
+      &lt;GameDirectory&gt;%24(VINTAGE_STORY)&lt;/GameDirectory&gt;
+      &lt;EnterWorldOnStartup&gt;false&lt;/EnterWorldOnStartup&gt;
+      &lt;DataFolderDirectoy&gt;%24(AppData)&lt;/DataFolderDirectoy&gt;
+  &lt;/PropertyGroup&gt;
+&lt;/Project&gt;
+    </DefaultLocalSettingsFile>
+  </PropertyGroup>
+  <Target Name="EnsureSettingsJson" BeforeTargets="ModInfo" Condition="!Exists('Properties\localSettings.props')">
+    <MakeDir Directories="Properties" />
+    <WriteLinesToFile File="Properties\localSettings.props" Overwrite="true" Lines="$(DefaultLocalSettingsFile)" />
+    <Error Text="Local settings file was missing, generated a new one. Run build again." />
+  </Target>
   
   <!-- Creates/updates modinfo.json file in build directory -->
   <Target Name="ModInfo" AfterTargets="CleanReferenceCopyLocalPaths">
