--- a/configlib/configlib.csproj
+++ b/configlib/configlib.csproj
@@ -2,7 +2,7 @@
   <!-- Mod info -->
   <PropertyGroup>
     <ModName>Config lib</ModName>
-    <ModVersion>1.10.3</ModVersion>
+    <ModVersion>1.10.4</ModVersion>
     <ModId>configlib</ModId>
     <Description>A universal place to configure your mods. Makes it possible for content mods to have configs too.</Description>
     <Side>universal</Side>
@@ -152,7 +152,7 @@
   </Target>
 
   <!-- Archives output directory into zip and puts it into Releases folder -->
-  <Target Name="ZipFiles" AfterTargets="Build" Condition=" '$(Configuration)' == 'Release' ">
+  <Target Name="ZipFiles" AfterTargets="CleanReferenceCopyLocalPaths" Condition=" '$(Configuration)' == 'Release' ">
     <Message Text="Pachaging into '$(ReleaseFile)'" Importance="high" />
     <MakeDir Directories="$(ReleasesDir)" />
     <Delete Files="$(ReleasePath)" />
