--- a/configlib/configlib.csproj
+++ b/configlib/configlib.csproj
@@ -2,7 +2,7 @@
   <!-- Mod info -->
   <PropertyGroup>
     <ModName>Config lib</ModName>
-    <ModVersion>1.10.8</ModVersion>
+    <Version>1.10.8</Version>
     <ModId>configlib</ModId>
     <Description>A universal place to configure your mods. Makes it possible for content mods to have configs too.</Description>
     <Side>universal</Side>
@@ -27,7 +27,6 @@
     <Nullable>enable</Nullable>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Version>1.3.13</Version><!-- Do not advance-->
   </PropertyGroup>
 
   <!-- Loading local settings file -->
@@ -41,7 +40,7 @@
     <OutputPath>$(OutputDir)\$(ModId)</OutputPath>
     <ModIconFile>$(ProjectDir)\resources\modicon.png</ModIconFile>
     <ReleasesDir>$(ProjectDir)\Releases</ReleasesDir>
-    <ReleaseFile>$(ModId)_$(ModVersion).zip</ReleaseFile>
+    <ReleaseFile>$(ModId)_$(Version).zip</ReleaseFile>
     <ReleasePath>$(ReleasesDir)\$(ReleaseFile)</ReleasePath>
   </PropertyGroup>
 
@@ -53,6 +52,26 @@
     <ModDir>$(ProjectDir)\$(OutputDir)</ModDir>
     <EnterWorldCommand Condition="'$(EnterWorldOnStartup)' == 'true'">"-o" "$(WorldName)"</EnterWorldCommand>
   </PropertyGroup>
+
+  <!-- NuGet settings -->
+  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>Maltiez.VintageStory.ConfigLib</PackageId>
+    <Authors>Maltiez</Authors>
+    <PackageTags>Vintage Story;VintageStory</PackageTags>
+    <RepositoryUrl>https://github.com/maltiez2/vsmod_configlib</RepositoryUrl>
+    <PackageProjectUrl>https://mods.vintagestory.at/configlib</PackageProjectUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageOutputPath>$(ReleasesDir)</PackageOutputPath>
+    <PackageIcon>modicon.png</PackageIcon>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+  </PropertyGroup>
+  <ItemGroup>
+    <None Include="../LICENSE.txt" Pack="true" PackagePath="" />
+    <None Include="../README.md" Pack="true" PackagePath="" />
+    <None Include="resources/modicon.png" Pack="true" PackagePath="" />
+  </ItemGroup>
 
 
   <!-- References to libraries that are being used in project -->
@@ -94,14 +113,14 @@
   <!-- Creating local settings file -->
   <PropertyGroup>
     <DefaultLocalSettingsFile>
-&lt;Project&gt;
-   &lt;PropertyGroup&gt;
+      &lt;Project&gt;
+      &lt;PropertyGroup&gt;
       &lt;DataFolderName&gt;VintagestoryData&lt;/DataFolderName&gt;
       &lt;GameDirectory&gt;%24(VINTAGE_STORY)&lt;/GameDirectory&gt;
       &lt;EnterWorldOnStartup&gt;false&lt;/EnterWorldOnStartup&gt;
       &lt;DataFolderDirectoy&gt;%24(AppData)&lt;/DataFolderDirectoy&gt;
-   &lt;/PropertyGroup&gt;
-&lt;/Project&gt;
+      &lt;/PropertyGroup&gt;
+      &lt;/Project&gt;
     </DefaultLocalSettingsFile>
   </PropertyGroup>
   <Target Name="EnsureSettingsJson" BeforeTargets="ModInfo" Condition="!Exists('Properties\localSettings.props')">
@@ -114,7 +133,7 @@
   <Target Name="ForceRebuild" BeforeTargets="BeforeBuild">
     <Touch Files="@(Compile)" AlwaysCreate="true" />
   </Target>
-  
+
   <!-- Creates/updates modinfo.json file in build directory -->
   <Target Name="ModInfo" BeforeTargets="CopyFilesToOutput">
     <PropertyGroup>
@@ -123,7 +142,7 @@
     "type": "code",
     "name": "$(ModName)",
     "modid": "$(ModId)",
-    "version": "$(ModVersion)",
+    "version": "$(Version)",
 
     "description": "$(Description)",
     "authors": [ @(ModInfoAuthors->'"%(Identity)"', ', ') ],
